@@ -21,10 +21,12 @@ class grades {
      * @return array
      * @throws dml_exception
      */
-    public function getGrades(int $courseid, int $coursemoduleid, int $moduleinstance) : array {
+    public function getGrades($courseid, $coursemoduleid, $moduleinstance, $groupid){
         global $DB;
 
-        $sql = "select pa.id as attemptid,
+        if($groupid>0){
+            list($groupswhere, $groupparams) = $DB->get_in_or_equal($groupid);
+            $sql = "select pa.id as attemptid,
                     u.lastname,
                     u.firstname,
                     p.name,
@@ -36,10 +38,34 @@ class grades {
                     pat.aiaccuracy,
                     pa.grade
                 from {pchat} as p
-                    inner join  (select max(mpa.id) as id, mpa.userid, mpa.pchat, mpa.grade
-                            from {pchat_attempts} mpa
-                            group by mpa.userid, mpa.pchat, mpa.grade
-                        ) as pa on p.id = pa.pchat
+                    inner join {pchat_attempts} pa on p.id = pa.solo
+                    inner join {course_modules} as cm on cm.course = p.course and cm.id = ?
+                    inner join {groups_members} gm ON pa.userid=gm.userid
+                    inner join {user} as u on pa.userid = u.id
+                    inner join {pchat_attemptstats} as pat on pat.attemptid = pa.id and pat.userid = u.id
+                    left outer join {pchat_ai_result} as par on par.attemptid = pa.id and par.courseid = p.course
+                where p.course = ?
+                    AND pa.pchat = ?
+                    AND gm.groupid $groupswhere 
+                order by pa.id DESC";
+
+            $alldata = $DB->get_records_sql($sql, array_merge([$coursemoduleid, $courseid, $moduleinstance] , $groupparams));
+
+            //not groups
+        }else {
+            $sql = "select pa.id as attemptid,
+                    u.lastname,
+                    u.firstname,
+                    p.name,
+                    p.transcriber,
+                    pat.turns,
+                    pat.avturn,
+                    par.accuracy,
+                    pa.pchat,
+                    pat.aiaccuracy,
+                    pa.grade
+                from {pchat} as p
+                    inner join {pchat_attempts} pa on p.id = pa.solo
                     inner join {course_modules} as cm on cm.course = p.course and cm.id = ?
                     inner join {user} as u on pa.userid = u.id
                     inner join {pchat_attemptstats} as pat on pat.attemptid = pa.id and pat.userid = u.id
@@ -47,7 +73,28 @@ class grades {
                 where p.course = ?
                     AND pa.pchat = ?
                 order by u.lastname";
+            $alldata = $DB->get_records_sql($sql, [$coursemoduleid, $courseid, $moduleinstance]);
+        }
 
-        return $DB->get_records_sql($sql, [$coursemoduleid, $courseid, $moduleinstance]);
-    }
-}
+        //loop through data getting most recent attempt
+        $results=array();
+        if ($alldata) {
+            $user_attempt_totals = array();
+            foreach ($alldata as $thedata) {
+
+                //we ony take the most recent attempt
+                if (array_key_exists($thedata->userid, $user_attempt_totals)) {
+                    $user_attempt_totals[$thedata->userid] = $user_attempt_totals[$thedata->userid] + 1;
+                    continue;
+                }
+                $user_attempt_totals[$thedata->userid] = 1;
+
+                $results[] = $thedata;
+            }
+            foreach ($results as $thedata) {
+                $thedata->totalattempts = $user_attempt_totals[$thedata->userid];
+            }
+        }
+        return $results;
+    }//end of function
+}//end of class
