@@ -101,7 +101,7 @@
             const selectBox = element.querySelector('select[name="gradesUserSelect"]');
             $(element).find('input[type=button]').attr('disabled', 'disabled');
             studentId = selectBox.value;
-            $(element).find('.chatplayer').removeAttr('src');
+            $(element).find('.chatplayer').attr('src','');
             $(element).find('.chattranscript').html("No data.");
             $(element).find('.chatturns').html(0);
             $(element).find('.chatwords').html(0);
